// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Label /> Default story renders snapshot 1`] = `
<label
  class="label"
>
  <span
    class="text text--body-md"
  >
    Label
  </span>
   
</label>
`;

exports[`<Label /> LabelAfter story renders snapshot 1`] = `
<label
  class="label"
>
  <span
    class="text text--body-md"
  >
    Label
  </span>
   
  <span
    class="text text--body-sm"
  >
    <span>
      *
    </span>
  </span>
</label>
`;
